# Smart-Hospital-Management-Use-RL

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  schemas.py
app/routes/: api.py  views.py
app/services/: hospital_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: admin.html  base.html  dashboard.html  docs.html  index.html
app/templates/errors/: 404.html  500.html
core/: __init__.py  agents.py  config.py  env.py
server/: app.py
tests/: conftest.py  test_api.py  test_env.py
